@@ -25,4 +25,5 @@ wxGTK:
 
 wxMSW:
 
+- Improve wxMimeTypesManager open command detection (Eric Jensen).
 - Make wxFILTER_INCLUDE_LIST in wxTextValidator actually usable.
